k8s/week4-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: week4-app
  namespace: week4-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: week4-app
  template:
    metadata:
      labels:
        app: week4-app
    spec:
      containers:
        - name: week4-app
          image: week4-app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
