k8s/week4-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week4-app-service
  namespace: week4-app
spec:
  selector:
    app: week4-app
  ports:
    - port: 80
      targetPort: 80
